--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   python_app:
     build: .
+    volumes:
+      - ./sessions:/app/sessions    
     ports:
       - "5000:5000"  # Python
       - "3001:3001"  # Node.js
